--- a/hollyrosa/public/css/style.css
+++ b/hollyrosa/public/css/style.css
@@ -994,5 +994,6 @@ th.program_layers_printable_table {
 td.program_layers_printable_table {
     border-left: 1px solid #444;
     border-bottom: 1px solid #000;
+    vertical-align:top;
 }
 
